Sat Jul 13 12:27:34 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_associate_index): fill new terminator length, not
	  old one.

Sat Jul 13 12:24:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32: move from ext/dl and ext/fiddle.  since ext/extmk.rb
	  builds extensions in alphabetical order, compiled?('fiddle') under
	  ext/dl makes no sense.

Sat Jul 13 09:26:09 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Removed.
	  (bigrsh_bang): Ditto.
	  (bigmul1_toom3): Use bary_small_lshift and bary_small_rshift.

Sat Jul 13 01:04:43 2013  Zachary Scott  <e@zzak.io>

	* lib/rubygems/psych_additions.rb: Ignore Psych docs here

Fri Jul 12 18:10:46 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/fiddle/win32/lib/win32/registry.rb
	  (Win32::Registry::API#make_wstr): same as r41922.

Fri Jul 12 16:28:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_associate_index): refill the terminator if it
	  becomes longer than before.  [ruby-dev:47500] [Bug #8624]

	* string.c (str_null_char, str_fill_term): get rid of out of bound
	  access.

	* string.c (rb_str_fill_terminator): add a parameter for the length of
	  new terminator.

Fri Jul 12 11:26:25 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_reject_bang): do not call rb_hash_foreach() if RHash
	  has ntbl and it is empty.

Fri Jul 12 11:17:41 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (recursive_hash): use RHASH_SIZE() to check hash size.

Fri Jul 12 00:20:00 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_size): use RHASH_SIZE().

Fri Jul 12 00:08:24 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_values): set array capa to RHASH_SIZE().

Thu Jul 11 23:54:45 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_keys): set array capa to RHASH_SIZE().

Thu Jul 11 21:30:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
